# arches-querysets

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/actions/build-and-test-branch/: action.yml
.github/workflows/: main.yml
arches_querysets/: apps.py  arches_querysets_urls.py  fields.py  lookups.py  models.py  query_expressions.py  querysets.py  settings.py  urls.py
arches_querysets/bulk_operations/: tiles.py
arches_querysets/datatypes/: __init__.py  concept_types.py  datatypes.py  file.py  resource_types.py  string.py  url.py
arches_querysets/migrations/: 0001_initial.py
arches_querysets/rest_framework/: generic_views.py  interchange_fields.py  multipart_json_parser.py  serializers.py  utils.py  view_mixins.py
arches_querysets/utils/: datatype_transforms.py  models.py  tests.py
arches_querysets/utils/parsers/: multipart_json_parser.py
arches_querysets/views/api/: generic.py  mixins.py
docs/: tutorial.ipynb
tests/: test_aggregates.py  test_datatypes.py  test_lookups.py  test_performance.py  test_rest_framework.py  test_save.py  test_serialization.py  utils.py
